adding terminal overrides

--- a/tmux.conf
+++ b/tmux.conf
@@ -28,6 +28,7 @@ set -g base-index 1
 
 # statusbar --------------------------------------------------------------
 set -g display-time 2000
+set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
 # default statusbar colors
 set -g status-fg white
