fixing small quirks

--- a/tmux.conf
+++ b/tmux.conf
@@ -10,7 +10,7 @@ set -g history-limit 1000
 
 # mouse support
 set-option -g mouse-select-pane on
-setw -g mode-mouse on
+#setw -g mode-mouse on
 
 # use | and - to split windows
 unbind %
