--- a/tmux.conf
+++ b/tmux.conf
@@ -9,8 +9,8 @@ bind r source-file ~/.tmux.conf
 set -g history-limit 1000
 
 # mouse support
-set-option -g mouse-select-pane on
-setw -g mode-mouse on
+#set-option -g mouse-select-pane on
+#setw -g mode-mouse on
 
 # use | and - to split windows
 unbind %
