--- a/tmux.conf
+++ b/tmux.conf
@@ -26,6 +26,17 @@ set -g bell-action any
 # start window indexing at one instead of zero
 set -g base-index 1
 
+# Use vim keybindings in copy mode
+setw -g mode-keys vi
+
+# Setup 'v' to begin selection as in Vim
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+
+# Update default binding of `Enter` to also use copy-pipe
+unbind -t vi-copy Enter
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+
 # statusbar --------------------------------------------------------------
 set -g display-time 2000
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
